; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_vm86.c_POPL.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_vm86.c_POPL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm86frame = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vm86frame*)* @POPL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @POPL(%struct.vm86frame* %0) #0 {
  %2 = alloca %struct.vm86frame*, align 8
  %3 = alloca i32, align 4
  store %struct.vm86frame* %0, %struct.vm86frame** %2, align 8
  %4 = load %struct.vm86frame*, %struct.vm86frame** %2, align 8
  %5 = getelementptr inbounds %struct.vm86frame, %struct.vm86frame* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.vm86frame*, %struct.vm86frame** %2, align 8
  %8 = getelementptr inbounds %struct.vm86frame, %struct.vm86frame* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @MAKE_ADDR(i32 %6, i32 %9)
  %11 = call i32 @vm86_fuword(i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load %struct.vm86frame*, %struct.vm86frame** %2, align 8
  %13 = getelementptr inbounds %struct.vm86frame, %struct.vm86frame* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %14, 4
  store i32 %15, i32* %13, align 4
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @vm86_fuword(i32) #1

declare dso_local i32 @MAKE_ADDR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
